# VTKandOpenGL

./: .gitignore  README.md
project1a/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project1A.cxx  project1A.sln  project1A.vcxproj  project1A.vcxproj.filters
project1b/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project1B.cxx  project1B.sln  project1B.vcxproj  project1B.vcxproj.filters
project1c/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  first_100_output.txt  get_triangles.cxx  project1C.cxx  project1C.sln  project1C.vcxproj  project1C.vcxproj.filters
project1d/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  first_10.txt  project1D.cxx  project1D.sln  project1D.vcxproj  project1D.vcxproj.filters
project1e/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project1E.cxx  project1E.sln  project1E.vcxproj  (+1 more)
project3c/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Findings.docx  Findings.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project3C.cxx  project3C.sln  project3C.vcxproj  project3C.vcxproj.filters
(+64 files in other folders)
